# agentos-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
agentos_sdk/: __init__.py  cli.py  config.py  django_auth.py  oidc.py  scaffold.py
agentos_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentos_sdk/templates/full/: .env.example  README.md  agentos.toml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
agentos_sdk/templates/full-ai/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml
agentos_sdk/templates/full-ai/backend/: Dockerfile  manage.py  requirements.txt
agentos_sdk/templates/full-ai/frontend/: Dockerfile  index.html  nginx.conf  vite.config.ts
agentos_sdk/templates/full/backend/: Dockerfile  Dockerfile.prod  requirements.txt
agentos_sdk/templates/full/frontend/: Dockerfile  index.html  nginx.conf  (+1 more)
agentos_sdk/templates/headless/: README.md  pyproject.toml
docs/: BUILD_AND_REGISTER_A_FULL_AI_AGENT.md  ONBOARDING_QUICKSTART.md
examples/deploy/: .env.example  Dockerfile.agent  docker-compose.fullagent.template.yml  docker-compose.summarizer.yml
examples/scribe/: agentos.toml  pyproject.toml
examples/scribe/agentos_scribe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/scribe/scribe/: __init__.py  handler.py  manifest.py
examples/summarizer/: agentos.toml  pyproject.toml
examples/summarizer/agentos_summarizer.egg-info/: PKG-INFO  SOURCES.txt
examples/summarizer/summarizer/: handler.py  manifest.py
examples/tests/: run_tests.py
(+24 files in other folders)
